--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -1,7 +1,7 @@
-bazel_dep(name = "com_myorg_rules_mylang", version = "0.0.0", dev_dependency = True)
+bazel_dep(name = "com_bookingcom_rules_pitest", version = "0.0.0", dev_dependency = True)
 bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
 
 local_path_override(
-    module_name = "com_myorg_rules_mylang",
+    module_name = "com_bookingcom_rules_pitest",
     path = "../..",
 )
