--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -5,3 +5,36 @@ local_path_override(
     module_name = "com_bookingcom_rules_pitest",
     path = "../..",
 )
+
+bazel_dep(name = "rules_java", version = "7.4.0")
+bazel_dep(name = "rules_jvm_external", version = "6.0")
+
+bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
+bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
+
+bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
+
+maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+
+maven.install(
+    artifacts = [
+        "org.junit.jupiter:junit-jupiter:5.6.1",
+        "org.assertj:assertj-core:3.14.0",
+        "nl.jqno.equalsverifier:equalsverifier:3.5",
+        "org.mockito:mockito-core:3.9.0",
+        "org.mockito:mockito-junit-jupiter:3.9.0",
+        "org.junit:junit-bom:5.6.1",
+        "pl.pragmatists:JUnitParams:1.0.4",
+        "org.pitest:pitest:1.15.8"
+    ],
+    fetch_sources = False,
+    lock_file = "//:maven_install.json",
+    name = "maven"
+)
+
+
+use_repo(
+    maven,
+    "maven",
+    "unpinned_maven",
+)
