--- a/pitest/BUILD.bazel
+++ b/pitest/BUILD.bazel
@@ -3,27 +3,20 @@ load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 # For stardoc to reference the files
 exports_files(["defs.bzl"])
 
-# This is the target rule authors should put in their "toolchains"
-# attribute in order to get a runtime for the correct platform.
-# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
-toolchain_type(
-    name = "toolchain_type",
-    visibility = ["//visibility:public"],
-)
-
-bzl_library(
-    name = "repositories",
-    srcs = ["repositories.bzl"],
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pitest/private:versions",
-        "@bazel_tools//tools/build_defs/repo:http.bzl",
-        "@bazel_tools//tools/build_defs/repo:utils.bzl",
-    ],
-)
-
 bzl_library(
     name = "defs",
     srcs = ["defs.bzl"],
+    visibility = ["//visibility:public"],
+)
+
+alias(
+    name = "org_pitest_pitest_command_line",
+    actual = "@maven_pitest//:org_pitest_pitest_command_line",
+    visibility = ["//visibility:public"],
+)
+
+alias(
+    name = "org_pitest_pitest_junit5_plugin",
+    actual = "@maven_pitest//:org_pitest_pitest_junit5_plugin",
     visibility = ["//visibility:public"],
 )
