--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -18,19 +18,17 @@ bazel_dep(name = "rules_java", version = "7.4.0")
 bazel_dep(name = "rules_jvm_external", version = "6.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
-
 maven.install(
+    name = "maven_pitest",
     artifacts = [
         "org.pitest:pitest:1.15.8",
         "org.pitest:pitest-entry:1.15.8",
         "org.pitest:pitest-command-line:1.15.8",
-        "org.pitest:pitest-junit5-plugin:1.2.1"
+        "org.pitest:pitest-junit5-plugin:1.2.1",
     ],
     fetch_sources = False,
     lock_file = "//:maven_install.json",
-    name = "maven_pitest"
 )
-
 use_repo(
     maven,
     "maven_pitest",
