--- a/e2e/smoke/.bazelrc
+++ b/e2e/smoke/.bazelrc
@@ -2,3 +2,4 @@ common --java_runtime_version=remotejdk_17
 common --java_language_version=17
 common --tool_java_runtime_version=remotejdk_17
 common --tool_java_language_version=17
+test --test_output=errors
