bazel: adding wrapper for pitest
We need to wrap the pitest entry point to substite environmental variables

--- a/pitest/BUILD.bazel
+++ b/pitest/BUILD.bazel
@@ -36,6 +36,12 @@ java_binary(
     ],
 )
 
+alias(
+    name = "cli-wrapper",
+    actual = "//pitest/private/wrapper",
+    visibility = ["//visibility:public"],
+)
+
 bzl_library(
     name = "defs",
     srcs = ["defs.bzl"],
