--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -1,6 +1,4 @@
-bazel_dep(name = "com_bookingcom_rules_pitest", version = "0.0.0", dev_dependency = True)
-bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
-
+bazel_dep(name = "com_bookingcom_rules_pitest", version = "0.0.0")
 local_path_override(
     module_name = "com_bookingcom_rules_pitest",
     path = "../..",
@@ -8,11 +6,6 @@ local_path_override(
 
 bazel_dep(name = "rules_java", version = "7.4.0")
 bazel_dep(name = "rules_jvm_external", version = "6.0")
-
-bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
-bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
-
 bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
