--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,23 +2,22 @@
 
 module(
     name = "com_bookingcom_rules_pitest",
-    version = "v0.0.1",
     compatibility_level = 6,
+    version = "v0.0.1",
 )
 
 bazel_dep(name = "bazel_skylib", version = "1.4.1")
 bazel_dep(name = "platforms", version = "0.0.5")
-
-bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
-bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
-bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
-
+bazel_dep(name = "gazelle", dev_dependency = True, repo_name = "bazel_gazelle", version = "0.35.0")
+bazel_dep(name = "bazel_skylib_gazelle_plugin", dev_dependency = True, version = "1.4.1")
+bazel_dep(name = "aspect_bazel_lib", dev_dependency = True, version = "1.32.1")
+bazel_dep(name = "buildifier_prebuilt", dev_dependency = True, version = "6.1.2")
 bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
 bazel_dep(name = "rules_java", version = "7.4.0")
 bazel_dep(name = "rules_jvm_external", version = "6.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+
 maven.install(
     name = "maven_pitest",
     artifacts = [
@@ -30,6 +29,7 @@ maven.install(
     fetch_sources = True,
     lock_file = "//:maven_install.json",
 )
+
 use_repo(
     maven,
     "maven_pitest",
