--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -1,6 +1,7 @@
-bazel_dep(name = "com_bookingcom_rules_pitest", version = "0.0.0")
+bazel_dep(name = "rules_pitest", version = "0.0.0")
+
 local_path_override(
-    module_name = "com_bookingcom_rules_pitest",
+    module_name = "rules_pitest",
     path = "../..",
 )
 
@@ -9,6 +10,7 @@ bazel_dep(name = "rules_jvm_external", version = "6.0")
 bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+
 maven.install(
     name = "maven",
     artifacts = [
@@ -27,6 +29,7 @@ maven.install(
     fetch_sources = True,
     lock_file = "//:maven_install.json",
 )
+
 use_repo(
     maven,
     "maven",
